Добавлено удаление чатов
